--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,9 @@
 body {
-    font-family: "Kaushan Script", cursive;
-    font-family: "Montserrat", sans-serif;
-    font-family: "Roboto", sans-serif;
+  font-family: "Kaushan Script", cursive;
+  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
 
-
-header {
+  header {
     background-image: url("./images/eagle.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -13,151 +12,201 @@ header {
     // height: 100vh;
     color: white;
 
-nav:first-child {
-    display: block;
-    font-size: 0;
-    margin: 0 auto 15vh auto;
-    width: 70%;
-    padding-top:3vh;
+    nav:first-child {
+      display: block;
+      font-size: 0;
+      margin: 0 auto 15vh auto;
+      width: 70%;
+      padding-top: 3vh;
 
-    .logo {
-      width: 45%;
-      display: inline-block;
-      font-family: 'Montserrat', sans-serif;
-      font-weight: bold; 
-      font-size: 1.9vw;
-    }
-        a {
-            text-decoration: none;
-            cursor: pointer;
-            color: white;
+      .logo {
+        width: 45%;
+        display: inline-block;
+        font-family: "Montserrat", sans-serif;
+        font-weight: bold;
+        font-size: 1.9vw;
+      }
+      a {
+        text-decoration: none;
+        cursor: pointer;
+        color: white;
+      }
+
+      ul {
+        width: 52%;
+        display: inline-block;
+
+        li {
+          display: inline-block;
+          box-sizing: border-box;
+          text-align: center;
+          width: 14%;
+          font-size: 0.8vw;
         }
 
-    ul {
-      width: 52%;
-      display: inline-block;
-
-      li {
-        display: inline-block;
-        box-sizing: border-box;
-        text-align: center;
-        width: 14%;
-        font-size: 0.8vw;
+        li:first-child:hover {
+          color: #fce38a;
+          text-decoration: underline 2px solid #fce38a;
+        }
+      }
     }
 
-    li:first-child:hover {
-        color: #fce38a;
-        text-decoration: underline 2px solid #fce38a;
+    h3 {
+      font-family: "Kaushan Script", cursive;
+      text-align: center;
+      font-size: 2.5vw;
+      margin-bottom: 4vh;
     }
-   }
- }
 
- h3 {
-    font-family: "Kaushan Script", cursive;
-    text-align: center;
-    font-size: 2.5vw;
-    margin-bottom: 4vh;
-    
- }
+    h1 {
+      font-size: 5.5vw;
+      font-weight: bold;
+      text-align: center;
+      //  letter-spacing: 3px;
+    }
 
- h1 {
-     font-size: 5.5vw;
-     font-weight: bold;
-     text-align: center;
-    //  letter-spacing: 3px;
- }
+    .line {
+      display: block;
+      margin: auto;
+      width: 3.9vw;
+      height: 0.3vh;
+      margin-top: 9.7vh;
+      margin-bottom: 6.2vh;
+    }
 
- .line {
-     display: block;
-     margin: auto;
-     width: 3.9vw;
-     height: 0.3vh;
-     margin-top: 9.7vh;
-     margin-bottom: 6.2vh;
- }
+    input {
+      padding: 2.2vh 2vw;
+      background-color: #efc888;
+      border: 2px solid #ffffff;
+      color: #ffffff;
+      display: block;
+      margin: auto;
+      //  width: 10.48vw;
+      //  height: 5.7vh;
+    }
+    nav:last-child {
+      width: 70%;
+      display: block;
+      margin: auto;
+      font-size: 0;
 
- input {
-     padding: 2.2vh 2vw;
-     background-color: #efc888;
-     border: 2px solid #ffffff;
-     color: #ffffff;
-     display: block;
-     margin: auto;
-    //  width: 10.48vw;
-    //  height: 5.7vh;
-
- }
-nav:last-child {
-    width: 70%;
-    display: block;
-    margin: auto;
-    font-size: 0;
-
-    img {
+      img {
         width: 15.5vw;
-        margin-right: 1.8vw;
-        margin-top: 15vh;
-        margin-bottom: 1vh;
-    }
+        height: 3px;
+        margin: 15vh 1.8vw 1vh 0;
+      }
 
-    // img:first-child:hover {
-    //     background-color: red;
-    // }
+      .red-hover:hover {
+        background-image: url("./images/pr_bar.png");
+        width: 15.5vw;
+        height: 3px;
+      }
 
-    a {
+      a {
         text-decoration: none;
         color: white;
         display: inline-block;
         padding-bottom: 2.7vh;
 
         h4 {
-            font-size: 0.9vw;
-            
-            span {
-                font-size: 1.3vw;
-                font-weight: bold;
-            }
-        }
-    }
-}
- 
-}
+          font-size: 0.9vw;
 
-.wrapper{
+          span {
+            font-size: 1.3vw;
+            font-weight: bold;
+          }
+        }
+      }
+    }
+  }
+
+  .wrapper {
     width: 75%;
     display: block;
     margin: auto;
 
     .about {
-        text-align: center;
+      text-align: center;
+      margin-top: 13.9vh;
 
-        div img {
-            display: inline-block;
-            width: 25.3vw;
-            height: 36.3vh;
-        }
+      div img {
+        display: inline-block;
+        width: 20vw;
+        height: 31.2vh;
+        padding-bottom: 15.7vh;
+      }
 
+      div img:first-child {
+        width: 22vw;
+        height: 33vh;
+        margin-right: 1.5vw;
+      }
+
+      div img:last-child {
+        margin-left: 1vw;
+      }
+
+      h5 {
+        font-family: "Kaushan Script", cursive;
+        font-size: 1.56vw;
+      }
+
+      h2 {
+        font-size: 1.95vw;
+        font-family: "Montserrat", sans-serif;
+        font-weight: bold;
+        line-height: 1.6;
+      }
+
+      .line-red {
+        background-color: #f7adad;
+        width: 4vw;
+        height: 0.3vh;
+        margin-top: 5vh;
+      }
+
+      p {
+        width: 52vw;
+        font-family: "Roboto", sans-serif;
+        font-size: 0.97vw;
+        color: #999999;
+        display: block;
+        margin: auto;
+        line-height: 1.6;
+        margin-top: 6.4vh;
+        margin-bottom: 12vh;
+      }
+    }
+  }
+
+  .numbers {
+    display: block;
+    background-color: #95e1d3;
+    height: 34vh;
+
+    .row {
+        display: block;
+        width: 70%;
+        margin: auto;
+        font-size: 0;
+        
     }
 
-    .about {
-        margin-top: 13.9vh;
+    .row div {
+      display: inline-block;
+      color: white;
 
-        h5 {
-            font-family: "Kaushan Script", cursive; 
-            font-size: 1.56vw; 
-        }
+      h6 {
+        font-family: "Montserrat", sans-serif;
+        font-size: 4.7vw;
+        font-weight: bold;
+       
+      }
 
-        h2 {
-            font-size: 1.95vw;
-            font-family: "Montserrat", sans-serif;
-            font-weight: bold;
-            line-height: 1.6;
-        }
-
-        p {
-            width: 62vw;
-            margin-right: 0;
-        }
+      p {
+          font-size: 0.9vw;
+          font-family: "Montserrat", sans-serif;
+      }
     }
-}
+  }
 }
