--- a/style.scss
+++ b/style.scss
@@ -195,6 +195,12 @@ body {
     .row div {
       display: inline-block;
       color: white;
+      width: 14%;
+      text-align: center;
+      transform: translateY(100%);
+      padding-right: 1.6vw;
+      padding-left: 1.6vw;
+      border-right: 2px solid white;
 
       h6 {
         font-family: "Montserrat", sans-serif;
@@ -204,7 +210,7 @@ body {
       }
 
       p {
-          font-size: 0.9vw;
+          font-size: 0.7vw;
           font-family: "Montserrat", sans-serif;
       }
     }
