services section done

--- a/style.css
+++ b/style.css
@@ -48,13 +48,13 @@ body header nav:first-child ul li {
   font-size: 0.65vw;
 }
 
-body header nav:first-child ul li:first-child:hover {
+body header nav:first-child ul li:hover {
   color: #fce38a;
   -webkit-text-decoration: underline 2px solid #fce38a;
           text-decoration: underline 2px solid #fce38a;
 }
 
-body header h3 {
+body header h2 {
   font-family: "Kaushan Script", cursive;
   text-align: center;
   font-size: 3.75vw;
@@ -85,6 +85,10 @@ body header input {
   margin: auto;
   width: 8.38vw;
   height: 4.3vh;
+}
+
+body header input:hover {
+  background-color: #fce38a;
 }
 
 body header nav:last-child {
@@ -228,5 +232,76 @@ body .numbers .row div h6 {
 body .numbers .row div p {
   font-size: 0.74vw;
   font-family: "Montserrat", sans-serif;
+}
+
+body .services {
+  text-align: center;
+  margin-top: 11.5vh;
+  margin-bottom: 11.5vh;
+}
+
+body .services h5 {
+  font-family: "Kaushan Script", cursive;
+  font-size: 1.25vw;
+}
+
+body .services h2 {
+  font-size: 1.56vw;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  line-height: 1.6;
+  margin: 1.1vh 0 4.2vh 0;
+}
+
+body .services .line-red {
+  display: block;
+  margin: auto;
+  background-color: #f7adad;
+  width: 4vw;
+  height: 0.3vh;
+  margin-top: 4vh;
+  margin-bottom: 6.8vh;
+}
+
+body .services div {
+  display: inline-block;
+  text-align: left;
+}
+
+body .services div h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.73vw;
+  font-size: bold;
+  color: #333333;
+  margin-bottom: 2vh;
+  margin-top: 2vh;
+  margin-left: 1vw;
+}
+
+body .services div p {
+  font-family: "Roboto", sans-serif;
+  font-size: 0.7vw;
+  color: #999999;
+  line-height: 1.6;
+  margin-bottom: 3vh;
+  margin-left: 1vw;
+  width: 30vh;
+}
+
+body .services div .small-icon {
+  display: inline-block;
+  width: 1.7vw;
+  height: 3.3vh;
+  margin-top: 2vh;
+  margin-right: 1vw;
+  margin-left: 2vw;
+  vertical-align: top;
+}
+
+body .services .horizontal-line {
+  width: 85%;
+  height: 1px;
+  border-bottom: 1px solid #f2f2f2;
+  margin-bottom: 2vh;
 }
 /*# sourceMappingURL=style.css.map */
