--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@ body {
     nav:first-child {
       display: block;
       font-size: 0;
-      margin: 0 auto 15vh auto;
+      margin: 0 auto 12vh auto;
       width: 70%;
       padding-top: 3vh;
 
@@ -38,15 +38,16 @@ body {
 
         li {
           display: inline-block;
-          box-sizing: border-box;
           text-align: center;
           width: 14%;
           font-size: 0.65vw;
+          padding-bottom: 0.8vh;
         }
 
         li:hover {
           color: #fce38a;
           text-decoration: underline 2px solid #fce38a;
+          text-underline-offset: 1vh;
         }
       }
     }
@@ -95,15 +96,15 @@ body {
       font-size: 0;
 
       img {
-        width: 15.5vw;
-        height: 3px;
+        width: 14.6vw;
+        height: 2px;
         margin: 15vh 1.8vw 1vh 0;
+        box-shadow: inset 0 0 0 0 #f38181; 
       }
 
-      .red-hover:hover {
-        background-image: url("./images/pr_bar.png");
-        width: 15.5vw;
-        height: 3px;
+      img:hover {
+        box-shadow: inset 14.69vw 0 0 0 #f38181;
+        transition: ease-out 0.5s;
       }
 
       a {
@@ -138,16 +139,12 @@ body {
         width: 20.2vw;
         height: 27.03vh;
         padding-bottom: 10.63vh;
-      }
-
-      div img:first-child {
-        width: 22vw;
-        height: 33vh;
-        margin-right: 1.3vw;
-      }
-
-      div img:last-child {
         margin-left: 1.15vw;
+      }
+
+      div img:hover {
+        content: url("./images/super_team.png");
+        transform: scale(1.08); 
       }
 
       h5 {
