--- a/style.scss
+++ b/style.scss
@@ -42,6 +42,7 @@ body {
           width: 14%;
           font-size: 0.65vw;
           padding-bottom: 0.8vh;
+          cursor: pointer;
         }
 
         li:hover {
@@ -82,8 +83,11 @@ body {
       font-size: 0.72vw;
       display: block;
       margin: auto;
+      margin-top: 1vh;
+      margin-bottom: 8vh;
       width: 8.38vw;
       height: 4.3vh;
+      cursor: pointer;
     }
 
     input:hover {
@@ -95,23 +99,19 @@ body {
       margin: auto;
       font-size: 0;
 
-      img {
-        width: 14.6vw;
-        height: 2px;
-        margin: 15vh 1.8vw 1vh 0;
-        box-shadow: inset 0 0 0 0 #f38181; 
-      }
-
-      img:hover {
-        box-shadow: inset 14.69vw 0 0 0 #f38181;
-        transition: ease-out 0.5s;
-      }
-
-      a {
-        text-decoration: none;
-        color: white;
+      .second-row {
         display: inline-block;
-        padding-bottom: 2.7vh;
+        background: transparent;
+        border-bottom: none;
+        border-left: none;
+        border-right: none;
+        border-top: 2px solid rgba(255, 255, 255, 0.6);
+        width: 14vw;
+        text-align: left;
+        color: #ffffff;
+        padding-top: 1.2vh;
+        margin: 10vh 1.5vw 0 1.8vw;
+        cursor: pointer;
 
         h4 {
           font-size: 0.9vw;
@@ -121,6 +121,22 @@ body {
             font-weight: bold;
           }
         }
+      }
+
+    //   .second-row:after {
+    //     position: absolute;
+    //     left: 20px;
+    //     bottom: 0;
+    //     content: '';
+    //     height: 5px;
+    //     border-top: 2px solid #f38181;
+    //     transition:  0.5s linear; 
+    // }
+  
+      .second-row:hover {
+          border-top: 2px solid #f38181;
+          width: 14vw;
+         
       }
     }
   }
@@ -140,6 +156,7 @@ body {
         height: 27.03vh;
         padding-bottom: 10.63vh;
         margin-left: 1.15vw;
+        cursor: pointer;
       }
 
       div img:hover {
@@ -298,6 +315,46 @@ body {
         border-bottom: 1px solid #f2f2f2;
         margin-bottom: 2vh;
       }
+    }
+
+    .design {
+      background-image: url("./images/layer_mountains.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
+      height: 80vh;
+      text-align: center;
+      padding-top: 12vh;
+      margin-bottom: 12vh;
+      
+
+      h5 {
+        font-family: "Kaushan Script", cursive;
+        font-size: 1.25vw;
+      }
+
+      h2 {
+        font-size: 1.56vw;
+        font-family: "Montserrat", sans-serif;
+        font-weight: bold;
+        line-height: 1.6;
+      }
+
+      .line-red {
+        background-color: #f7adad;
+        width: 4vw;
+        height: 0.3vh;
+        margin-top: 4.02vh;
+      }
+
+      .phones {
+        position: absolute;
+        top: 72.5%;
+        left: 55%;
+        transform: translate(-50%, -50%);
+      
+      }
+
     }
   }
 
