--- a/style.scss
+++ b/style.scss
@@ -414,6 +414,7 @@ body {
         div:last-child div{
           display: inline-block;
           width: 100%;
+          border: 2px solid #999999;
           
         }
 
